# django_preupload

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
preupload/: admin.py  app.py  conf.py  forms.py  model_fields.py  models.py  storage.py  tokens.py  urls.py  views.py  widgets.py
preupload/management/commands/: cleanup_preuploads.py
preupload/migrations/: 0001_initial.py
preupload/static/preupload/js/: preupload.js
preupload/templates/preupload/widgets/: preupload.html
preupload/tests/: settings.py  test_commands.py  test_forms.py  test_integration.py  test_storage.py  test_tokens.py  test_urls.py  test_views.py  test_widgets.py  urls.py  views.py
preupload/tests/templates/preupload_tests/: form.html  success.html
