[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-preupload"
version = "0.1.0"
description = "Reusable Django mini-app that preuploads files server-side and resolves them via signed tokens so uploads persist across failed form validation."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
dev = [
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["preupload"]

[tool.black]
line-length = 88
target-version = ["py38"]
